# flexgrep

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  LICENSE.md  README.md
doc/uml_visualparadigm/: flexgrep.vpp  flexgrep.vpp.bak_000f  flexgrep.vpp.bak_001d  flexgrep.vpp.bak_002d
include/flexgrep/: File.hpp  Flexgrep.hpp
include/flexgrep/ContentProcessors/: IContentProcessor.hpp  SequentialContentProcessor.hpp
include/flexgrep/ContentProcessors/ParallelContentProcessor/: ParallelContentProcessor.hpp  SharedDataViews.hpp
include/flexgrep/PathFilter/: AlwaysMatchingFilter.hpp  BinaryMetaFilter.hpp  ContentRegexFilter.hpp  FilenameMetaFilter.hpp  IContentFilter.hpp  IMetaFilter.hpp
include/flexgrep/Utilities/: Configuration.hpp  Options.hpp  Utilities.hpp  Wildcard.hpp
include/lightgrep/: File.hpp  ICheckAndOutput.hpp  Lightgrep.hpp  Options.hpp  SequentialCheckAndOutput.hpp  Utilities.hpp
include/lightgrep/ContentProcessors/: SequentialContentProcessor.hpp
include/lightgrep/ContentProcessors/ParallelContentProcessor/: ParallelContentProcessor.hpp  SharedDataViews.hpp
include/lightgrep/ParallelCheckAndOutput/: ParallelCheckAndOutput.hpp
include/lightgrep/PathFilter/: AlwaysMatchingFilter.hpp  ContentRegexFilter.hpp  FilenameFilter.hpp  FilenameMetaFilter.hpp  IContentFilter.hpp  IMetaFilter.hpp  IPathFilter.hpp  SecondLvlRegexFilter.hpp
include/lightgrep/Utilities/: Options.hpp
src/: CMakeLists.txt  Configuration.cpp  File.cpp  Flexgrep.cpp  ICheckAndOutput.cpp  IContentProcessor.cpp  Lightgrep.cpp  Options.cpp  Utility.cpp  Wildcard.cpp  main.cpp
src/ContentProcessors/ParallelContentProcessor/: SharedDataViews.cpp
src/PathFilter/: ContentRegexFilter.cpp  FilenameFilter.cpp  FilenameMetaFilter.cpp  IMetaFilter.cpp  IPathFilter.cpp  SecondLvlRegexFilter.cpp
tests/: CMakeLists.txt  Wildcard.cpp  testmain.cpp
tests/PathFilter/: FilenameFilter.cpp  FilenameMetaFilter.cpp
tests/TestEnvironment/: 2Folder1  aaaa.txt  testCyclicSymlink
